[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/GachaponScene.gd" id="1"]

[sub_resource type="Animation" id="Animation_1"]
resource_name = "gacha_spin"
length = 3.0
tracks/0/type = "rotation"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/GachaContainer/GachaMachine")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [0.0, 12.566, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
"gacha_spin": SubResource("Animation_1")
}

[node name="GachaponScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.15, 1)

[node name="ParticleSystem" type="CPUParticles2D" parent="."]
position = Vector2(640, 360)
emitting = false
amount = 100
lifetime = 2.0
emission/initial_velocity_min = 100.0
emission/initial_velocity_max = 200.0
gravity = Vector2(0, 98)
color = Color(1, 0.8, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GachaContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/GachaContainer"]
layout_mode = 2
text = "¡GACHAPÓN DE FICHAJES!"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="CenterContainer/GachaContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="GachaMachine" type="ColorRect" parent="CenterContainer/GachaContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 300)
color = Color(0.8, 0.2, 0.2, 1)

[node name="GachaLabel" type="Label" parent="CenterContainer/GachaContainer/GachaMachine"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "MÁQUINA
GACHAPÓN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator2" type="Control" parent="CenterContainer/GachaContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="MoneyLabel" type="Label" parent="CenterContainer/GachaContainer"]
layout_mode = 2
text = "Tickets Bufas: 0"
horizontal_alignment = 1

[node name="VSeparator3" type="Control" parent="CenterContainer/GachaContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/GachaContainer"]
layout_mode = 2
alignment = 1

[node name="GachaButton" type="Button" parent="CenterContainer/GachaContainer/ButtonContainer"]
layout_mode = 2
text = "¡OBTENER JUGADOR! (1 Ticket Bufas)"

[node name="VSeparator4" type="Control" parent="CenterContainer/GachaContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="BackButton" type="Button" parent="CenterContainer/GachaContainer"]
layout_mode = 2
text = "VOLVER"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1")
}

[node name="ResultPopup" type="AcceptDialog" parent="."]
title = "¡NUEVO JUGADOR!"
initial_position = 2
size = Vector2i(400, 300)

[node name="ResultContainer" type="VBoxContainer" parent="ResultPopup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayerImage" type="TextureRect" parent="ResultPopup/ResultContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 100)
expand_mode = 1
stretch_mode = 5

[node name="PlayerName" type="Label" parent="ResultPopup/ResultContainer"]
layout_mode = 2
text = "Nombre del Jugador"
horizontal_alignment = 1

[node name="PlayerStats" type="Label" parent="ResultPopup/ResultContainer"]
layout_mode = 2
text = "Overall: 85
Posición: Delantero"
horizontal_alignment = 1
